[refactor] add auth endpoints to swagger | fixed getting address of the url
